<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_iphone_6__7__8_plus___1"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/enter_the_details"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_shape_input"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_shape_input"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Name"
        app:layout_constraintStart_toStartOf="@+id/Name"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/EmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_shape_input"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/Phone"
        app:layout_constraintStart_toStartOf="@+id/Phone"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <EditText
        android:id="@+id/PasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_shape_input"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/EmailRegister"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/EmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/EmailRegister" />

    <Button
        android:id="@+id/Continue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:text="@string/Continue"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/PasswordRegister"
        app:layout_constraintStart_toStartOf="@+id/PasswordRegister"
        app:layout_constraintTop_toBottomOf="@+id/PasswordRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>