<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_iphone_6__7__8_plus___1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginToContinue_activity_mainXML"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:gravity="center_horizontal"
        android:text="@string/textView_LoginToContinue"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_activity_mainXML"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_shape_input"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:drawablePadding="10dp"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToContinue_activity_mainXML" />

    <EditText
        android:id="@+id/password_activity_mainXML"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_shape_input"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="10dp"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/email_activity_mainXML"
        app:layout_constraintStart_toStartOf="@+id/email_activity_mainXML"
        app:layout_constraintTop_toBottomOf="@+id/email_activity_mainXML" />

    <Button
        android:id="@+id/button_Login_activity_mainXML"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_button"
        android:gravity="center_horizontal"
        android:text="@string/button_Login_activity_mainXML"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_Register_activity_mainXML"
        app:layout_constraintEnd_toStartOf="@+id/button_Register_activity_mainXML"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_Register_activity_mainXML"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_button"
        android:gravity="center_horizontal"
        android:text="@string/button_Register_activity_mainXML"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_Login_activity_mainXML"
        app:layout_constraintTop_toBottomOf="@+id/password_activity_mainXML" />

</androidx.constraintlayout.widget.ConstraintLayout>